# rs_iterm

./: .gitignore  Cargo.toml  README.md  test_client.py  test_mcp.sh
docs/planejamento/: 01-analise-arquitetura.md  02-analise-base-rust.md  03-plano-implementacao.md  04-guia-migracao.md  05-planejamento-testes.md  06-mcp.md  README.md  index.md
docs/ultima-task/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md
src/: main.rs
src/mcp/: mod.rs  router.rs  server.rs  tools.rs  types.rs  utilities.rs
src/mcp/iterm/: applescript.rs  mod.rs
src/mcp/tests/: basic_tests.rs  integration_applescript.rs  mod.rs  router_tests.rs
