[package]
name = "rs_iterm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "iTerm MCP server implementation in Rust"
readme = "README.md"
repository = "https://github.com/yourusername/rs_iterm"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# RPC routing
rpc-router = { version = "0.2.0-alpha.1" }

# Regular expressions
regex = "1.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.18"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies if needed

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
mockall = "0.11"
rstest = "0.18"
test-case = "3.2"

[profile.release]
# Release optimizations
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Development settings
opt-level = 0
debug = true
